// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should adopt a textAlign prop 1`] = `
.c0 {
  font-size: 15.3px;
  padding: 0.225rem;
  margin-top: 0;
  margin-bottom: 0;
  line-height: 1.3;
  margin-left: 0;
  margin-right: 0;
  text-align: center;
}

@media (min-width:600px) and (max-width:1800px) {
  .c0 {
    font-size: calc( 15.3px + (17.4 - 15.3) * ((100vw - 600px) / (1800 - 600)) );
  }
}

@media (min-width:1800px) {
  .c0 {
    font-size: 17.4px;
  }
}

@media (min-width:600px) {
  .c0 {
    padding: 0.33325rem;
  }
}

<p
  className="c0"
>
  Centered text
</p>
`;

exports[`should adopt an align prop 1`] = `
.c0 {
  font-size: 15.3px;
  padding: 0.225rem;
  margin-top: 0;
  margin-bottom: 0;
  line-height: 1.3;
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:600px) and (max-width:1800px) {
  .c0 {
    font-size: calc( 15.3px + (17.4 - 15.3) * ((100vw - 600px) / (1800 - 600)) );
  }
}

@media (min-width:1800px) {
  .c0 {
    font-size: 17.4px;
  }
}

@media (min-width:600px) {
  .c0 {
    padding: 0.33325rem;
  }
}

<p
  className="c0"
>
  Centered element
</p>
`;

exports[`should match baseline snapshot 1`] = `
.c0 {
  font-size: 15.3px;
  padding: 0.225rem;
  margin-top: 0;
  margin-bottom: 0;
  line-height: 1.3;
  margin-left: 0;
  margin-right: 0;
}

@media (min-width:600px) and (max-width:1800px) {
  .c0 {
    font-size: calc( 15.3px + (17.4 - 15.3) * ((100vw - 600px) / (1800 - 600)) );
  }
}

@media (min-width:1800px) {
  .c0 {
    font-size: 17.4px;
  }
}

@media (min-width:600px) {
  .c0 {
    padding: 0.33325rem;
  }
}

<p
  className="c0"
>
  Text
</p>
`;
